--- a/src/assets/sass/modules/_navigation.scss
+++ b/src/assets/sass/modules/_navigation.scss
@@ -45,6 +45,12 @@ button.txp-nav-toggle {
     }
 }
 
+@media (prefers-color-scheme: dark) {
+    .txp-nav a {
+        color: $color-text;
+    }
+}
+
 /**
  * Primary-level navigation menu items (dropdown toggles).
  *
