--- a/src/assets/sass/setup/_colours.scss
+++ b/src/assets/sass/setup/_colours.scss
@@ -59,7 +59,7 @@ $dark-color-background:                    #373e45 !default;
 $dark-color-background-box:                shade($dark-color-background, 14%) !default;
 $dark-color-background-form:               shade($dark-color-background, 28%) !default;
 $dark-color-background-form-disabled:      #eeeeee !default; // TODO
-$dark-color-gradient-from:                 tint($dark-color-background, 8%) !default;
+$dark-color-gradient-from:                 tint($dark-color-background, 10%) !default;
 $dark-color-gradient-to:                   tint($dark-color-background, 16%) !default;
 
 // borders
